# func_wrap.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
downstream/: Cargo.toml  proc_macro_lib.rs  user.rs
src/: lib.rs  tests.rs
tests/: downstream.rs  main.rs
