[package]
name = "func_wrap"
version = "0.1.0-rc1"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0.*"
proc-macro2 = "1.0.*"

[dependencies.syn]
version = "1.0.*"
features = [
    # "extra-traits",
    "full",
]

[workspace]
members = ["downstream"]
